--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('/Users/mgpel/OneDrive/Autumn_Falls/train.csv')\n",
-    "test = pd.read_csv('/Users/mgpel/OneDrive/Autumn_Falls/test.csv')"
+    "train = pd.read_csv('/Users/mgpel/train.csv')\n",
+    "test = pd.read_csv('/Users/mgpel/test.csv')"
    ]
   },
   {
